# squares_test_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.run/: Run squares test.run.xml
dependencies/: CMakeLists.txt
dependencies/glad/: info.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw-3.3.8/: CMakeLists.txt  CONTRIBUTORS.md  README.md
dependencies/glfw-3.3.8/docs/html/: jquery.js
include/cpptest/: DimensionsProvider.h  Engine.h  FramebufferDimensionsProvider.h  SquaresTestEngine.h
include/cpptest/models/: BoxModel.h  Model.h
include/cpptest/shaders/: ShaderProgram.h
include/cpptest/squares/: SquareController.h  SquareManager.h
include/cpptest/struct/: Color.h  InputAction.h
include/cpptest/util/: Coordinates.h  IOHelper.h  Random.h
shaders/: fshader.frag  vshader.vert
src/cpptest/: Engine.cpp  SquaresTestEngine.cpp  main.cpp
src/cpptest/models/: BoxModel.cpp  Model.cpp
src/cpptest/shaders/: ShaderProgram.cpp
src/cpptest/squares/: SquareController.cpp  SquareManager.cpp
src/cpptest/struct/: Color.cpp
src/cpptest/util/: Coordinates.cpp  IOHelper.cpp  Random.cpp
